force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/Whistleblower_Report__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <label>Whistleblower Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>