force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the report was made anonymously.</description>
    <inlineHelpText>Indicates if the report was made anonymously.</inlineHelpText>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>