force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Anonymous_Id__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Id__c</fullName>
    <description>Used as an identifier for anonymous reporters.</description>
    <displayFormat>WB-{0000}</displayFormat>
    <inlineHelpText>Used as an identifier for anonymous reporters.</inlineHelpText>
    <label>Anonymous Id</label>
    <type>AutoNumber</type>
</CustomField>