force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <businessOwnerGroup>Whistleblower_Admins</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>