force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Type of issue reported.</description>
    <inlineHelpText>Type of issue reported.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>