force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Closed&apos;), NOW(), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>