force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <formula>$User.Is_Employed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter Is Employed</label>
    <type>Checkbox</type>
</CustomField>