force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Fits_Within_Office_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Fits_Within_Office_Priorities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fits Within Office Priorities</label>
    <type>Checkbox</type>
</CustomField>