force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Has_Required_User_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Required_User_Data__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK($User.FirstName)),
        NOT(ISBLANK($User.LastName)),
        NOT(ISBLANK($User.Phone)),
        NOT(ISBLANK($User.Email)),
        NOT(ISBLANK($User.CompanyName))
    ), 
TRUE, 
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Required User Data</label>
    <type>Checkbox</type>
</CustomField>