force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Initial_Response__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response__c</fullName>
    <label>Initial Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>