force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Privacy_Temrs_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Temrs_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Terms Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>