force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Report_Details__c.field-meta.xml
<CustomField>
    <fullName>Report_Details__c</fullName>
    <description>Detailed description of the report.</description>
    <inlineHelpText>Detailed description of the report.</inlineHelpText>
    <label>Report Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>