force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date when the report was made</description>
    <inlineHelpText>Date when the report was made</inlineHelpText>
    <label>Reported Date</label>
    <type>DateTime</type>
</CustomField>