force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Whistleblower_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>