force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reporter_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Email__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter Email</label>
    <type>Text</type>
</CustomField>