force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reporter_Employer__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Employer__c</fullName>
    <formula>$User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter Employer</label>
    <type>Text</type>
</CustomField>