force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reporter_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Name__c</fullName>
    <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter Name</label>
    <type>Text</type>
</CustomField>