force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Reporter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Phone__c</fullName>
    <formula>$User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporter Phone</label>
    <type>Text</type>
</CustomField>