force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not an office priority</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Out of jurisdiction</fullName>
            </value>
            <value>
                <fullName>Can Be Resolved Internally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>