force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Terms_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Terms_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>