force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Visibility_Desired__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Desired__c</fullName>
    <label>Visibility Desired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Anonymous / Non-Confidential</fullName>
            </value>
            <value>
                <fullName>Fully Anonymous</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>