force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/fields/Within_Office_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Within_Office_Jurisdiction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within Office Jurisdiction</label>
    <type>Checkbox</type>
</CustomField>