force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visibility_Desired__c</columns>
    <columns>Category__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>