force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Initial_Evaluation_Queue_Urgent_Whistleblower_Report.listView-meta.xml
<ListView>
    <fullName>Initial_Evaluation_Queue_Urgent_Whistleblower_Report</fullName>
    <columns>NAME</columns>
    <columns>Visibility_Desired__c</columns>
    <columns>Category__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Initial Evaluation Queue - Urgent</label>
    <queue>Initial_Evaluation_Queue_Urgent</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>