force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Initial_Evaluation_Queue_Urgent_Whistleblower_Report1.listView-meta.xml
<ListView>
    <fullName>Initial_Evaluation_Queue_Urgent_Whistleblower_Report1</fullName>
    <filterScope>Queue</filterScope>
    <label>Initial Evaluation Queue - Urgent</label>
    <queue>Initial_Evaluation_Queue_Urgent</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>