force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Initial_Review_Whistleblower_Report1.listView-meta.xml
<ListView>
    <fullName>Initial_Review_Whistleblower_Report1</fullName>
    <filterScope>Queue</filterScope>
    <label>Initial Evaluation Queue</label>
    <queue>Initial_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>