force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/My_Reports.listView-meta.xml
<ListView>
    <fullName>My_Reports</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Reported_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Visibility_Desired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Reports</label>
</ListView>