force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Report_Submission_Whistleblower_Report.listView-meta.xml
<ListView>
    <fullName>Report_Submission_Whistleblower_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Whistleblower Report Submission</label>
    <queue>Whistleblower_Report_Submission</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>