force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Under_Investigation_Whistleblower_Report1.listView-meta.xml
<ListView>
    <fullName>Under_Investigation_Whistleblower_Report1</fullName>
    <filterScope>Queue</filterScope>
    <label>Investigation Queue</label>
    <queue>Under_Investigation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>