force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Whistleblower_Report_Follow_Up_Queue_Whistleblower_Report1.listView-meta.xml
<ListView>
    <fullName
  >Whistleblower_Report_Follow_Up_Queue_Whistleblower_Report1</fullName>
    <filterScope>Queue</filterScope>
    <label>Submission Follow-Up Queue</label>
    <queue>Whistleblower_Report_Follow_Up_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>