force-app/main/Investigations/Whistleblower_Management/objects/Whistleblower_Report__c/listViews/Whistleblower_Support_Whistleblower_Report.listView-meta.xml
<ListView>
    <fullName>Whistleblower_Support_Whistleblower_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Queue</label>
    <queue>Whistleblower_Support</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>